--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "juego de quien quiere ser millonario",
   "main": "index.js",
   "scripts": {
-    "test": "start"
+    "start": "nodemon index.js"
   },
   "keywords": [
     "js"
